--- a/DRAFT/app/src/main/res/layout/activity_main.xml
+++ b/DRAFT/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?><!-- это макет для портретной ориентации -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-    <!-- в портретной ориентации у activity только один фрагмент выбора города-->
-    <fragment
-        android:id="@+id/first_fragment"
-        android:name="com.example.ablesson_1.MainFragment"
+    <include
+        layout="@layout/app_bar_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</LinearLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_main"
+        app:menu="@menu/activity_main_drawer" />
+
+</androidx.drawerlayout.widget.DrawerLayout>
