--- a/DRAFT/app/src/main/res/layout/item_history.xml
+++ b/DRAFT/app/src/main/res/layout/item_history.xml
@@ -2,22 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center">
 
         <TextView
             android:id="@+id/item_history_city"
             style="@style/MyTextStyleSerifBold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_weight="0.7"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="0.6"
+            android:gravity="center_vertical"
             tools:text="Москва" />
 
         <TextView
@@ -27,7 +29,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
-            android:layout_weight="0.3"
+            android:layout_marginEnd="30dp"
+            android:layout_weight="0.4"
+            android:gravity="end"
             tools:text="8" />
     </LinearLayout>
 
