--- a/DRAFT/app/src/main/res/layout/app_bar_main.xml
+++ b/DRAFT/app/src/main/res/layout/app_bar_main.xml
@@ -16,8 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay">
-        </androidx.appcompat.widget.Toolbar>
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -26,7 +25,5 @@
         android:id="@+id/first_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
-    <!-- в портретной ориентации у activity только один фрагмент выбора города-->
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
