--- a/DRAFT/app/src/main/res/values/cities_array.xml
+++ b/DRAFT/app/src/main/res/values/cities_array.xml
@@ -11,10 +11,10 @@
         <item>Калининград</item>
         <item>Владивосток</item>
         <item>Севастополь</item>
-        <item>Севастополь</item>
-        <item>Севастополь</item>
-        <item>Севастополь</item>
-        <item>Севастополь</item>
-        <item>Севастополь</item>
+        <item>Краснодар</item>
+        <item>Махачкала</item>
+        <item>Лондон</item>
+        <item>Париж</item>
+        <item>Токио</item>
     </string-array>
 </resources>
