--- a/DRAFT/app/src/main/res/layout/activity_second.xml
+++ b/DRAFT/app/src/main/res/layout/activity_second.xml
@@ -9,3 +9,4 @@
         android:layout_height="match_parent" />
 
 </FrameLayout>
+<!--После перехода на одну активити, данная активити не используется-->
