--- a/DRAFT/app/src/main/res/layout/fragment_city.xml
+++ b/DRAFT/app/src/main/res/layout/fragment_city.xml
@@ -10,7 +10,6 @@
         android:id="@+id/ac_ll_first"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         android:orientation="vertical">
 
 
@@ -68,23 +67,12 @@
             app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
             tools:text="Москва" />
 
-        <TextView
-            android:id="@+id/about"
-            style="@style/MyTextStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#00FFFFFF"
-            android:gravity="center"
-            android:text="О городе"
-            android:textSize="12sp"
-            app:layout_constraintTop_toBottomOf="@+id/city" />
-
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/about">
+            app:layout_constraintTop_toBottomOf="@+id/city">
 
             <ImageView
                 android:layout_width="0dp"
