--- a/DRAFT/app/src/main/res/layout/nav_header_main.xml
+++ b/DRAFT/app/src/main/res/layout/nav_header_main.xml
@@ -13,7 +13,7 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="Navigation header"
+        android:contentDescription="@string/navigation_header"
         android:paddingTop="8dp"
         app:srcCompat="@mipmap/ic_launcher_round" />
 
