--- a/DRAFT/app/src/main/res/values/attrs.xml
+++ b/DRAFT/app/src/main/res/values/attrs.xml
@@ -2,4 +2,10 @@
 <resources>
     <attr name="myTextColor" format="color|reference" />
     <attr name="myTextColor2" format="color|reference" />
+
+    <declare-styleable name="ThermometerView">
+        <attr name="thermometer_color" format="color" />
+        <attr name="level_color" format="color" />
+        <attr name="level" format="integer" />
+    </declare-styleable>
 </resources>
