--- a/DRAFT/app/src/main/res/menu/activity_main_drawer.xml
+++ b/DRAFT/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,10 +5,13 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_Start"
-            android:title="@string/start_screen" />
+            android:id="@+id/my_location"
+            android:title="@string/my_location" />
         <item
-            android:id="@+id/nav_Settings"
+            android:id="@+id/nav_start"
+            android:title="@string/list_of_cities" />
+        <item
+            android:id="@+id/nav_settings"
             android:title="@string/settings" />
         <item
             android:id="@+id/nav_history"
@@ -18,7 +21,7 @@
     <item android:title="@string/communicate">
         <menu>
             <item
-                android:id="@+id/nav_Developers"
+                android:id="@+id/nav_developers"
                 android:title="@string/about_developers" />
         </menu>
     </item>
