ДЗ 7 + google map

--- a/DRAFT/app/src/main/res/menu/activity_main_drawer.xml
+++ b/DRAFT/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,6 +16,9 @@
         <item
             android:id="@+id/nav_history"
             android:title="@string/story" />
+        <item
+            android:id="@+id/google_map"
+            android:title="@string/google_map" />
     </group>
 
     <item android:title="@string/communicate">
